feat: add delete file rpc
